# tomchat

./: .gitignore  Cargo.toml  LICENSE  README.md  config-backup.toml  config.toml  test-config.toml
include/: tomchat.h
scripts/: build-lib.sh  download-model.sh  download-parakeet.sh  setup-gemma.sh  setup-llama.sh  setup-ollama.sh
src/: app.rs  config.rs  lib.rs.backup  main.rs
src/audio/: capture.rs  mod.rs  vad.rs
src/input/: hotkey.rs  injection.rs  mod.rs
src/speech/: mod.rs  transcriber.rs
src/text_refinement/: config.rs  mod.rs  refiner.rs
