[package]
name = "tomchat"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "TomChat - Speech-to-text hotkey application named after my late dog Tommy"
license = "MIT"

[[bin]]
name = "tomchat"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Audio capture
cpal = "0.15"

# Voice Activity Detection  
webrtc-vad = "0.4"

# Speech-to-text (Codeberg maintained version)
whisper-rs = { git = "https://codeberg.org/tazz4843/whisper-rs" }

# Global hotkey detection
global-hotkey = "0.5"

# Text injection/automation
enigo = "0.2"

# Configuration management
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"

# HTTP client for sending state updates (using rustls instead of openssl)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async channels
tokio-util = "0.7"
crossbeam-channel = "0.5"

# Command line argument parsing
clap = { version = "4.0", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
