[package]
name = "tomchat"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "TomChat - Speech-to-text hotkey application named after my late dog Tommy"
license = "MIT"

[[bin]]
name = "tomchat"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Audio capture
cpal = "0.15"

# Speech-to-text using sherpa-onnx (Parakeet model)
sherpa-rs = { version = "0.6", features = ["download-binaries"] }

# Global hotkey detection
global-hotkey = "0.5"

# System tray icon (Linux)
ksni = "0.3"

# Text injection/automation
enigo = "0.2"

# Configuration management
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async channels
tokio-util = "0.7"
crossbeam-channel = "0.5"

# Command line argument parsing
clap = { version = "4.0", features = ["derive"] }

# Text refinement with Ollama (much simpler and more reliable)
ollama-rs = "0.3.2"
url = "2.4"

# Features
[features]
default = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
